Fix animation color when in dark mode

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -121,7 +121,7 @@ sup:target::after {
 	}
 
 	100% {
-		color: initial;
+		
 	}
 }
 
